fix bottom aligned chatbar experiment

--- a/onekoattachmenticon.theme.css
+++ b/onekoattachmenticon.theme.css
@@ -1,18 +1,19 @@
 /**
   * @name Onekoattachmenticon
   * @author cutekita
-  * @version 2.0.0
+  * @version 2.0.1
   * @description Replaces the attachment icon with Oneko
   * @website https://github.com/onekocord/onekocord
 */
 
 /*Add Oneko*/
-.attachButtonInner__0923f {
+.attachButtonInner__0923f.attachButtonInner__0923f {
   background: var(--onekoattachmenticon-skin, url(https://raw.githubusercontent.com/onekocord/onekocord/main/skins/default.png));
   animation: var(--onekoattachmenticon-wakeup-duration, 2s) 1 forwards gotosleep, var(--onekoattachmenticon-sleep-duration, 2s) var(--onekoattachmenticon-wakeup-duration, 2s) infinite var(--onekoattachmenticon-sleep-animation, sleep);
   image-rendering: var(--onekoattachmenticon-rendering, pixelated);
   width: 32px;
   height: 32px;
+  padding: 0;
   &:hover {
     animation: var(--onekoattachmenticon-wakeup-duration, 2s) 1 forwards var(--onekoattachmenticon-wakeup-animation, wakeup), var(--onekoattachmenticon-hovered-duration, 0.3s) var(--onekoattachmenticon-wakeup-duration, 2s) infinite var(--onekoattachmenticon-hovered-animation, alert)
   }
